Intermediate/Debugx64/Revit.IFC.Export/ParamExprResolverParserParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\git\IFC-for-Revit\2026\Source\Revit.IFC.Export\Utility\ParamExprResolverParser.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Revit.IFC.Export.Utility {

#pragma warning disable 3021

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class ParamExprResolverParserParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, INT_DIGIT=7, NAMEWITHSPECIALCHAR_EXPLICIT=8, 
		THIS=9, TYPE=10, RUNNINGNUMBER=11, MULTIPLY=12, DIVIDE=13, ADDITION=14, 
		SUBTRACT=15, STRING=16, NUMBER=17, WS=18;
	public const int
		RULE_atomic_param = 0, RULE_objref = 1, RULE_expr = 2, RULE_param_name = 3, 
		RULE_unary_operator = 4, RULE_ops = 5, RULE_power_op = 6, RULE_value = 7, 
		RULE_stringliteral = 8, RULE_realliteral = 9, RULE_signed_number = 10;
	public static readonly string[] ruleNames = {
		"atomic_param", "objref", "expr", "param_name", "unary_operator", "ops", 
		"power_op", "value", "stringliteral", "realliteral", "signed_number"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'.'", "'('", "')'", "'^'", null, null, null, null, 
		"'#'", "'*'", "'/'", "'+'", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "INT_DIGIT", "NAMEWITHSPECIALCHAR_EXPLICIT", 
		"THIS", "TYPE", "RUNNINGNUMBER", "MULTIPLY", "DIVIDE", "ADDITION", "SUBTRACT", 
		"STRING", "NUMBER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ParamExprResolverParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ParamExprResolverParserParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Atomic_paramContext : ParserRuleContext {
		public Param_nameContext param_name() {
			return GetRuleContext<Param_nameContext>(0);
		}
		public ObjrefContext objref() {
			return GetRuleContext<ObjrefContext>(0);
		}
		public Atomic_paramContext atomic_param() {
			return GetRuleContext<Atomic_paramContext>(0);
		}
		public Atomic_paramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atomic_param; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterAtomic_param(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitAtomic_param(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtomic_param(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Atomic_paramContext atomic_param() {
		Atomic_paramContext _localctx = new Atomic_paramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_atomic_param);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				State = 22; Match(T__0);
				State = 23; objref();
				State = 24; Match(T__1);
				}
				break;

			case 2:
				{
				State = 26; Match(T__0);
				State = 27; atomic_param();
				State = 28; Match(T__1);
				}
				break;
			}
			State = 32; Match(T__2);
			State = 33; param_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjrefContext : ParserRuleContext {
		public ITerminalNode THIS() { return GetToken(ParamExprResolverParserParser.THIS, 0); }
		public ITerminalNode TYPE() { return GetToken(ParamExprResolverParserParser.TYPE, 0); }
		public ITerminalNode RUNNINGNUMBER() { return GetToken(ParamExprResolverParserParser.RUNNINGNUMBER, 0); }
		public ObjrefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_objref; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterObjref(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitObjref(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObjref(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ObjrefContext objref() {
		ObjrefContext _localctx = new ObjrefContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_objref);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << THIS) | (1L << TYPE) | (1L << RUNNINGNUMBER))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public Atomic_paramContext atomic_param() {
			return GetRuleContext<Atomic_paramContext>(0);
		}
		public Unary_operatorContext unary_operator() {
			return GetRuleContext<Unary_operatorContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public OpsContext ops() {
			return GetRuleContext<OpsContext>(0);
		}
		public Power_opContext power_op() {
			return GetRuleContext<Power_opContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 38; value();
				}
				break;

			case 2:
				{
				State = 39; atomic_param();
				}
				break;

			case 3:
				{
				State = 40; unary_operator();
				State = 41; expr(3);
				}
				break;

			case 4:
				{
				State = 43; Match(T__3);
				State = 44; expr(0);
				State = 45; Match(T__4);
				State = 47;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					State = 46; power_op();
					}
					break;
				}
				}
				break;
			}
			_ctx.stop = _input.Lt(-1);
			State = 57;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_expr);
					State = 51;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 52; ops();
					State = 53; expr(3);
					}
					} 
				}
				State = 59;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Param_nameContext : ParserRuleContext {
		public ITerminalNode[] NAMEWITHSPECIALCHAR_EXPLICIT() { return GetTokens(ParamExprResolverParserParser.NAMEWITHSPECIALCHAR_EXPLICIT); }
		public ITerminalNode NAMEWITHSPECIALCHAR_EXPLICIT(int i) {
			return GetToken(ParamExprResolverParserParser.NAMEWITHSPECIALCHAR_EXPLICIT, i);
		}
		public Param_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_param_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterParam_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitParam_name(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParam_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Param_nameContext param_name() {
		Param_nameContext _localctx = new Param_nameContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_param_name);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 60; Match(NAMEWITHSPECIALCHAR_EXPLICIT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 63;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Unary_operatorContext : ParserRuleContext {
		public Unary_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unary_operator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterUnary_operator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitUnary_operator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnary_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Unary_operatorContext unary_operator() {
		Unary_operatorContext _localctx = new Unary_operatorContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_unary_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			_la = _input.La(1);
			if ( !(_la==ADDITION || _la==SUBTRACT) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OpsContext : ParserRuleContext {
		public ITerminalNode MULTIPLY() { return GetToken(ParamExprResolverParserParser.MULTIPLY, 0); }
		public ITerminalNode DIVIDE() { return GetToken(ParamExprResolverParserParser.DIVIDE, 0); }
		public ITerminalNode ADDITION() { return GetToken(ParamExprResolverParserParser.ADDITION, 0); }
		public ITerminalNode SUBTRACT() { return GetToken(ParamExprResolverParserParser.SUBTRACT, 0); }
		public OpsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ops; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterOps(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitOps(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOps(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OpsContext ops() {
		OpsContext _localctx = new OpsContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_ops);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULTIPLY) | (1L << DIVIDE) | (1L << ADDITION) | (1L << SUBTRACT))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Power_opContext : ParserRuleContext {
		public ITerminalNode INT_DIGIT() { return GetToken(ParamExprResolverParserParser.INT_DIGIT, 0); }
		public Power_opContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_power_op; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterPower_op(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitPower_op(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPower_op(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Power_opContext power_op() {
		Power_opContext _localctx = new Power_opContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_power_op);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(T__5);
			State = 71;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ADDITION || _la==SUBTRACT) {
				{
				State = 70;
				_la = _input.La(1);
				if ( !(_la==ADDITION || _la==SUBTRACT) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				}
			}

			State = 73; Match(INT_DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public RealliteralContext realliteral() {
			return GetRuleContext<RealliteralContext>(0);
		}
		public StringliteralContext stringliteral() {
			return GetRuleContext<StringliteralContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_value);
		try {
			State = 77;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ADDITION:
			case SUBTRACT:
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75; realliteral();
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76; stringliteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringliteralContext : ParserRuleContext {
		public ITerminalNode STRING() { return GetToken(ParamExprResolverParserParser.STRING, 0); }
		public StringliteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stringliteral; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterStringliteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitStringliteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringliteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringliteralContext stringliteral() {
		StringliteralContext _localctx = new StringliteralContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_stringliteral);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RealliteralContext : ParserRuleContext {
		public Signed_numberContext signed_number() {
			return GetRuleContext<Signed_numberContext>(0);
		}
		public RealliteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_realliteral; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterRealliteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitRealliteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRealliteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RealliteralContext realliteral() {
		RealliteralContext _localctx = new RealliteralContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_realliteral);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; signed_number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Signed_numberContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(ParamExprResolverParserParser.NUMBER, 0); }
		public Signed_numberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signed_number; } }
		public override void EnterRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.EnterSigned_number(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IParamExprResolverParserListener typedListener = listener as IParamExprResolverParserListener;
			if (typedListener != null) typedListener.ExitSigned_number(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IParamExprResolverParserVisitor<TResult> typedVisitor = visitor as IParamExprResolverParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSigned_number(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Signed_numberContext signed_number() {
		Signed_numberContext _localctx = new Signed_numberContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_signed_number);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ADDITION || _la==SUBTRACT) {
				{
				State = 83;
				_la = _input.La(1);
				if ( !(_la==ADDITION || _la==SUBTRACT) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				}
			}

			State = 86; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2: return expr_sempred((ExprContext)_localctx, predIndex);
		}
		return true;
	}
	private bool expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(_ctx, 2);
		}
		return true;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace Revit.IFC.Export.Utility
